--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ html {
    font-size: 62.5%;
 }
 
+body {
+   overflow-x: hidden;
+}
+
 a {
    text-decoration: none;
 }
@@ -39,7 +43,7 @@ a {
 .heading-title {
    font-family: var(--title-font);
    font-size: 10rem;
-   letter-spacing: 1px;
+   letter-spacing: 4px;
 }
 
 .heading-subtitle {
@@ -47,7 +51,7 @@ a {
    font-size: 2rem;
    font-weight: 300;
    text-align: center;
-   width: 30%;
+   width: 40%;
 }
 
 /*========== header ==========*/
@@ -76,8 +80,8 @@ header {
 }
 
 .navbar__logo {
-   width: 12%;
-   height: 12%;
+   width: 20rem;
+   height: auto;
 }
 
 .logo__img {
@@ -86,20 +90,37 @@ header {
    object-fit: cover;
 }
 
+.navigation {
+   position: relative;
+}
+
+.cancel-icon {
+   display: none;
+}
+.overplay-bg {
+   display: none;
+   position: fixed;
+   top: 0;
+   bottom: 0;
+   right: 0;
+   left: 0;
+   background-color: rgba(0, 0, 0, 0.6);
+   z-index: 2;
+}
+
 .navigation__item {
    display: inline-block;
    padding: 1rem 2rem;
 }
 .navigation__link {
    font-size: 1.5rem;
-   font-weight: 300;
    letter-spacing: 0.5px;
    color: var(--black);
    padding: 1rem 0;
 }
 
 .navigation__link:hover {
-   font-weight: var(--semibold);
+   border-bottom: 2px solid var(--black);
 }
 
 .navigation__link.active {
@@ -120,15 +141,29 @@ header {
    cursor: pointer;
 }
 
+.navbar__menu-toggle {
+   display: none;
+}
+
+.navbar__menu-toggle i {
+   font-size: 4rem;
+   cursor: pointer;
+}
+
 /* ========= Hero Section ========== */
 .hero {
-   background-image: url(../img/Landingpage2.png);
-   height: 100vh;
-   background-position: center;
+   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)), url(../img/Landingpage2.png);
+   height: 100%;
    background-repeat: no-repeat;
+   background-attachment: center;
+   background-position: center;
    background-size: cover;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
    display: flex;
    align-items: center;
+   padding: 25rem 0;
 }
 
 .inform__title {
@@ -199,13 +234,13 @@ header {
 }
 
 .box-img-brand {
-   width: 40%;
-   height: 40%;
-   align-self: center;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 .brand-img {
-   width: 100%;
+   width: 80%;
    height: 100%;
    object-fit: cover;
 }
@@ -336,7 +371,7 @@ header {
 
 .banner-news__title {
    font-family: var(--title-font);
-   font-size: 15rem;
+   font-size: 11rem;
    color: var(--white);
 }
 
@@ -350,9 +385,10 @@ header {
 .banner-news__desc {
    color: var(--white);
    font-size: 1.8rem;
-   width: 70%;
+   width: 90%;
    font-weight: 300;
    margin: 2rem 0;
+   line-height: 2.3rem;
 }
 
 .banner-news__btn {
@@ -447,10 +483,11 @@ header {
 .newletters {
    width: 100%;
    height: 400px;
-   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)), url(../img/Newletters-banner.jpg);
+   background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.3)), url(../img/newletter-banner.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
+   background-attachment: center;
    margin-bottom: 6rem;
 }
 .newletters__heading {
@@ -475,7 +512,7 @@ header {
    margin-top: 6rem;
    background-color: var(--white);
    height: 7rem;
-   width: 960px;
+   width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -569,4 +606,150 @@ header {
    margin-top: 1.5rem;
    font-size: 1.4rem;
    font-weight: 500;
+}
+
+/* ========== Footer ========= */
+footer {
+   width: 100%;
+   height: auto;
+   background-color: var(--black);
+   position: relative;
+   padding: 5rem 0;
+}
+
+.footer-wrapper {
+   display: grid;
+   width: 100%;
+   grid-template-columns: 2fr 1fr 1fr 1fr;
+   grid-gap: 2rem;
+}
+
+.about__logo {
+   width: 10rem;
+   height: auto;
+}
+
+.about__logo img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+
+.footer__title {
+   color: var(--white);
+   font-family: var(--title-font);
+   font-size: 3rem;
+   letter-spacing: 2px;
+   margin-bottom: 5rem;
+   position: relative;
+}
+
+.footer__title::after {
+   content: "";
+   position: absolute;
+   background-color: var(--white);
+   bottom: -15px;
+   left: 0;
+   height: 2px;
+   width: 4rem;
+   border: 2rem;
+}
+
+.footer__item {
+   margin-bottom: 1.5rem;
+}
+
+.footer__link {
+   color: var(--white);
+   font-size: 1.5rem;
+   letter-spacing: 1px;
+   font-weight: 300;
+}
+
+.footer__link:hover {
+   opacity: 0.6;
+}
+
+.about-social {
+   margin-top: 2rem;
+   display: grid;
+   grid-template-columns: repeat(4, 4rem);
+   grid-gap: 1rem;
+}
+
+.about-social__link {
+   display: inline-block;
+   background-color: var(--white);
+   width: 4rem;
+   height: 4rem;
+   display: grid;
+   place-items: center;
+   border-radius: 50%;
+}
+
+.about-social__link i {
+   font-size: 2rem;
+   color: var(--black);
+}
+
+.contact__list .footer__item {
+   display: grid;
+   grid-template-columns: 3rem 1fr;
+   grid-gap: 1.5rem;
+}
+
+.contact__list .footer__item span i {
+   color: var(--white);
+   font-size: 2rem;
+}
+.copyright {
+   width: 100%;
+   background-color: var(--black);
+   color: var(--white);
+   padding: 2rem 0;
+   text-align: center;
+   font-size: 1.2rem;
+   font-weight: 500;
+   position: relative;
+}
+
+.copyright::after {
+   position: absolute;
+   content: "";
+   width: 80%;
+   height: 1px;
+   border-radius: 2px;
+   top: 0;
+   left: 50%;
+   transform: translateX(-50%);
+   background-color: var(--white);
+}
+
+/* ========== Reponsive Section ========== */
+@media screen and (max-width: 1023px) {
+   footer {
+      padding: 3rem 0;
+   }
+
+   .footer-wrapper {
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 3rem;
+   }
+
+   .social {
+      display: none;
+   }
+}
+@media screen and (max-width: 767px) {
+   footer {
+      padding: 3rem 2rem;
+   }
+
+   .about__logo {
+      width: 20rem;
+   }
+
+   .footer-wrapper {
+      grid-template-columns: repeat(1, 1fr);
+   }
 }
