--- a/css/main.css
+++ b/css/main.css
@@ -411,14 +411,19 @@ header {
 .blog__body {
    margin-top: 4rem;
    display: grid;
-   grid-template-columns: 1fr 1fr;
+   grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+
    grid-template-rows: 25rem 25rem;
+   grid-auto-flow: dense;
    gap: 2rem;
-   width: 960px;
+   max-width: 960px;
    margin-right: auto;
    margin-left: auto;
 }
 
+.blog-box--post1 img {
+   object-position: 15% 10%;
+}
 .blog-box__img {
    width: 100%;
    height: 100%;
@@ -426,21 +431,15 @@ header {
 }
 
 .blog-box--post1 {
-   grid-column: 1/2;
-   grid-row: 1/2;
-}
-
-.blog-box--post1 img {
-   object-position: 15% 10%;
+   grid-column: span 2;
 }
 
 .blog-box--post2 {
-   grid-column: 2/3;
-   grid-row: 1/3;
+   grid-row: span 2;
 }
+
 .blog-box--post3 {
-   grid-column: 1/2;
-   grid-row: 2/3;
+   grid-column: span 2;
 }
 
 .blog-box {
