update reponsive fix

--- a/css/main.css
+++ b/css/main.css
@@ -246,6 +246,7 @@ header {
 }
 
 /* ========== New Release ========= */
+
 .new-release__tags {
    display: flex;
    justify-content: center;
@@ -363,6 +364,16 @@ header {
    height: 100%;
 }
 
+.banner-video {
+   width: 100%;
+   height: 35rem;
+}
+
+.banner-video iframe {
+   width: 100%;
+   height: 100%;
+}
+
 .banner-box {
    display: flex;
    justify-content: space-between;
@@ -408,7 +419,7 @@ header {
    margin-bottom: 6rem;
 }
 
-.blog__body {
+.blog__wrapper {
    margin-top: 4rem;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
@@ -624,7 +635,7 @@ footer {
 }
 
 .about__logo {
-   width: 10rem;
+   width: 20rem;
    height: auto;
 }
 
@@ -689,6 +700,13 @@ footer {
 .about-social__link i {
    font-size: 2rem;
    color: var(--black);
+}
+
+.about__desc {
+   color: var(--white);
+   font-size: 1.4rem;
+   margin-top: 1rem;
+   width: 90%;
 }
 
 .contact__list .footer__item {
