update navbar padding

--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -116,7 +116,7 @@
       font-size: 2rem;
    }
    .navbar {
-      padding: 0 2rem;
+      padding: 0 6rem 0 2rem;
    }
    .hero__inform {
       padding-left: 2rem;
