--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -128,6 +128,25 @@
    .new-releases {
       padding: 0 2rem;
    }
+
+   .product-box {
+      margin-bottom: 10rem;
+   }
+   .product-wrapper {
+      margin: 0;
+   }
+
+   .product__name {
+      font-size: 2rem;
+      font-weight: 500;
+   }
+
+   .product__price {
+      padding-top: 0.5rem;
+      padding-bottom: 2rem;
+      font-size: 2rem;
+      font-weight: 400;
+   }
    .banner {
       height: 100%;
       padding: 4rem 2rem;
