--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -103,6 +103,35 @@
    html {
       font-size: 40%;
    }
+
+   .product-interaction-bg {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: var(--white);
+      opacity: 0.7;
+      height: 8rem;
+      transition: all 0.3s ease;
+   }
+
+   .product-interaction {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      display: flex;
+      justify-content: space-around;
+      z-index: 2;
+      transition: all 0.5s ease;
+      height: 7rem;
+   }
+
+   .product-interaction i {
+      cursor: pointer;
+      font-size: 4rem;
+   }
+
    .heading-subtitle {
       width: 100%;
       font-size: 2.3rem;
