margin top banner

--- a/css/main.css
+++ b/css/main.css
@@ -364,6 +364,7 @@ header {
    background-position: center;
    height: 425px;
    margin-bottom: 6rem;
+   margin-top: 10rem;
    position: relative;
 }
 
