--- a/css/product.css
+++ b/css/product.css
@@ -155,18 +155,18 @@
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
-   width: 40rem;
+   width: 50rem;
    height: 4px;
    background-color: var(--black);
    z-index: 1;
 }
 .product-title::before {
-   content: "SHIRT";
+   content: "COLLECTION";
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
-   width: 20rem;
+   width: auto;
    height: 10rem;
    background-color: white;
    z-index: 2;
@@ -174,6 +174,10 @@
 
 .product-box-wrapper {
    margin-top: 5rem;
+}
+
+.product-box {
+   cursor: pointer;
 }
 .product-row {
    margin-bottom: 10rem;
@@ -236,3 +240,10 @@
    background: var(--black);
    color: var(--white);
 }
+
+.navbar__service span{
+   position: absolute;;
+   margin-left: -1rem;
+  margin-top: 1rem;
+  color: red;
+  }
