--- a/css/main.css
+++ b/css/main.css
@@ -716,9 +716,10 @@ footer {
 
 .about__desc {
    color: var(--white);
-   font-size: 1.4rem;
+   font-size: 1.6rem;
    margin-top: 1rem;
    width: 90%;
+   line-height: 2rem;
 }
 
 .contact__list .footer__item {
